# rock-paper-scissors-ml

./: README.md  build.sh  format.sh  pyproject.toml  run.sh
boilerplate-rock-paper-scissors/: RPS.py  main.py  shared.py
boilerplate-rock-paper-scissors/exploration_iterations/: it_10.json  it_100.json  it_1000.json  it_1002.json  it_1003.json  it_1004.json  it_1005.json  it_1006.json  it_1007.json  it_1008.json  it_1009.json  it_101.json  it_1010.json  it_1011.json  it_1012.json  it_1013.json  it_1014.json  it_1015.json  it_1016.json  it_1017.json  it_1018.json  it_1019.json  it_102.json  it_1020.json  it_1021.json  it_1022.json  it_1023.json  it_1024.json  it_1025.json  it_1026.json  it_1027.json  it_1028.json  it_1029.json  it_103.json  it_1030.json  it_1031.json  it_1032.json  it_1033.json  it_1034.json  it_1035.json  (+6531 more)
boilerplate-rock-paper-scissors/strategies/: abbey.json  kris.json  mrugesh.json  quincy.json  random_player.json
foo/: main.py
foo/exploration_iterations/: it_1006.json  it_1007.json  it_1008.json  it_1009.json  it_1012.json  it_1014.json  it_1019.json  it_1021.json  it_1022.json  it_1025.json  it_1026.json  it_1028.json  it_1031.json  it_1034.json  it_1041.json  it_1042.json  it_1046.json  it_1049.json  it_1052.json  it_1053.json  it_1064.json  it_1072.json  it_11.json  it_1244.json  it_13.json  it_15.json  it_17.json  it_18.json  it_19.json  it_20.json  it_2004.json  it_2007.json  it_2008.json  it_2010.json  it_2012.json  it_2014.json  it_3.json  it_3987.json  it_4.json  it_5.json  (+5 more)
